--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".AboutActivity">
+    tools:context="com.huynhps09200.nhom12.AboutActivity">
 
     <RelativeLayout
         android:id="@+id/about"
