--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".Start">
+    tools:context="com.huynhps09200.nhom12.Start">
 
     <ImageView
         android:id="@+id/ongvang"
