--- a/app/src/main/res/layout/activity_bill_manager.xml
+++ b/app/src/main/res/layout/activity_bill_manager.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.huynhps09200.nhom12.BillManagerActivity"
+    tools:context="com.doan.nhom12.BillManagerActivity"
     android:background="@drawable/bg">
     <ImageView
         android:id="@+id/backbill"
