--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context="com.huynhps09200.nhom12.MainActivity">
+    tools:context="com.doan.nhom12.MainActivity">
 
     <TextView
         android:id="@+id/imageView11"
