--- a/app/src/main/res/layout/activity_sales.xml
+++ b/app/src/main/res/layout/activity_sales.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context="com.huynhps09200.nhom12.SalesActivity">
+    tools:context="com.doan.nhom12.SalesActivity">
 
 
     <RelativeLayout
